--- a/src/global.css
+++ b/src/global.css
@@ -10,7 +10,7 @@
 
 html {
   overflow-x: none;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Poppins", serif;
 }
 
 .animate-delay-1000 {
